# bls12_381-bls

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: dusk_ci.yml
benches/: signature_bench.rs
src/: error.rs  hash.rs  lib.rs  serde_support.rs  signature.rs  signatures.rs
src/keys/: apk.rs  public.rs  secret.rs
tests/: keys.rs  serde.rs  signature.rs  test.rs  zeroize.rs
