[package]
name = "bls12_381-bls"
version = "0.2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/dusk-network/bls12_381-bls"
description = "Implementation of BLS signatures using the BLS12-381 curve"
keywords = ["cryptography", "bls", "bls12_381", "signatures"]
categories =["algorithms", "cryptography", "mathematics"]
exclude = [
    ".gitignore",
    "Cargo.lock",
    ".github/"
]
license = "MPL-2.0"

[dependencies]
dusk-bls12_381 = { version = "0.13", default-features = false, features = ["alloc", "pairings", "zeroize"] }
dusk-bytes = "0.1"
rand_core = { version = "0.6", default-features = false }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }
ff = { version = "0.13", default-features = false }
rayon = { version = "1.8", optional = true }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
rand = { version = "0.8", default-features = false, features = ["std_rng"] }

[features]
rkyv-impl = [
    "dusk-bls12_381/rkyv-impl",
    "rkyv",
    "bytecheck",
]
parallel = ["dep:rayon"]
