[package]
name = "bls12_381-bls"
version = "0.4.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/dusk-network/bls12_381-bls"
description = "Implementation of BLS signatures using the BLS12-381 curve"
keywords = ["cryptography", "bls", "bls12_381", "signatures"]
categories =["algorithms", "cryptography", "mathematics"]
exclude = [
    ".gitignore",
    "Cargo.lock",
    ".github/"
]
license = "MPL-2.0"

[dependencies]
dusk-bls12_381 = { version = "0.13", default-features = false, features = ["alloc", "pairings", "zeroize"] }
dusk-bytes = "0.1"
rand_core = { version = "0.6", default-features = false }
ff = { version = "0.13", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }
rayon = { version = "1.8", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
rkyv-impl = [
    "dusk-bls12_381/rkyv-impl",
    "rkyv",
    "bytecheck",
]
parallel = ["dep:rayon"]
